# maxtext_chartqa

./: .env.example  Dockerfile  README.md  pyproject.toml  run_experiment.sh
inference/: Dockerfile
