[project]
name = "maxtext_chartqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "fastparquet>=2024.11.0",
    "gcsfs>=2025.3.0",
    "ipython>=9.4.0",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "tensorboard>=2.20.0",
    "xpk>=0.10.1",
]
